Terminando de implementar el listado
Con la funcionalidad básica.